# final_consonant_formatter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fc_formatter/: __init__.py  formatter.py
src/final_consonant_formatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
