[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "0.1.0"
authors = [
  { name="Nahyun Park", email="nahowo@naver.com" },
]
description = "A simple package to attach correct case particles based on whether a Korean syllable ends with a final consonant."
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/nahowo/final_consonant_formatter"