# SPDX-FileCopyrightText: 2026 Nahyun Park <nahowo@naver.com>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "final_consonant_formatter"
version = "0.1.1"
authors = [
  { name="Nahyun Park", email="nahowo@naver.com" },
]
license = "MIT"
description = "A simple package to attach correct case particles based on whether a Korean syllable ends with a final consonant."
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/nahowo/final_consonant_formatter"